syntax = "proto3";
package mythos.wasmx.v1;

import "gogoproto/gogo.proto";
import "mythos/wasmx/v1/params.proto";
import "mythos/wasmx/v1/contract.proto";
import "mythos/wasmx/v1/role.proto";

option go_package = "github.com/loredanacirstea/wasmx/x/wasmx/types";

// GenesisState defines the wasmx module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];

  // bootstrap address
  string bootstrap_account_address = 2;
  repeated Role roles = 3 [(gogoproto.nullable) = false];
  repeated SystemContract system_contracts = 4 [(gogoproto.nullable) = false];

  repeated Code codes = 5
      [ (gogoproto.nullable) = false, (gogoproto.jsontag) = "codes,omitempty" ];
  repeated Contract contracts = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "contracts,omitempty"
  ];
  repeated Sequence sequences = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "sequences,omitempty"
  ];
  // not recommended
  // initiate pinned/AOT compiled contracts from a provided folder
  // instead of compiling the contracts from wasm
  string compiled_folder_path = 8;
}

message SystemContract {
  string address = 1;
  string label = 2;
  ContractStorageType storage_type = 3;
  bytes init_message = 4 [ (gogoproto.casttype) = "RawContractMessage" ];
  bool pinned = 5;
  bool native = 6;
  bool metering_off = 7; // some system contracts may be aot compiled with metering off
  SystemContractRole role = 8;
  // deps can be hex-formatted contract addresses (32 bytes)
  // or versioned interface labels
  repeated string deps = 9;
  CodeMetadataPB metadata = 10 [(gogoproto.nullable) = false];
  repeated ContractStoragePB contract_state = 11 [ (gogoproto.nullable) = false ];
  bytes source = 12;
}

// Code - for importing and exporting code data
message Code {
  uint64 code_id = 1;
  CodeInfoPB code_info = 2 [ (gogoproto.nullable) = false ];
  bytes code_bytes = 3;
}

// Contract struct encompasses ContractAddress, ContractInfo, and ContractState
message Contract {
  string contract_address = 1;
  ContractInfoPB contract_info = 2 [ (gogoproto.nullable) = false ];
  repeated ContractStoragePB contract_state = 3 [ (gogoproto.nullable) = false ];
}

// Sequence key and value of an id generation counter
message Sequence {
  bytes id_key = 1;
  uint64 value = 2;
}

